--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "type-check": "turbo run type-check",
+    "type-check:root": "tsc --noEmit",
     "prepare": "husky"
   },
   "keywords": [
