--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@url-shortener/types": "workspace:*",
     "nestjs-zod": "^4.3.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
