--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,7 +27,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@url-shortener/types": "workspace:*",
-    "nestjs-zod": "^4.3.1",
+    "nestjs-zod": "5.0.0-beta.20250719T005107",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
