--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,11 +27,13 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@url-shortener/types": "workspace:*",
+    "nest-winston": "^1.10.2",
     "nestjs-zod": "5.0.0-beta.20250719T005107",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25",
+    "winston": "^3.17.0",
     "zod": "^4.0.10"
   },
   "devDependencies": {
