feat: add Docker support for backend and update frontend components

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,14 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  backend:
+    build:
+      context: .
+      dockerfile: apps/backend/Dockerfile
+    ports:
+      - '8000:8000'
+    env_file:
+      - ./apps/backend/.env
 
 volumes:
   postgres_data:
