--- a/turbo.json
+++ b/turbo.json
@@ -34,6 +34,9 @@
     "test": {
       "dependsOn": ["^build"],
       "outputs": ["coverage/**"]
+    },
+    "clean": {
+      "cache": false
     }
   }
 }
