--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -4,16 +4,18 @@
 PORT=8000
 NODE_ENV=development
 
-# Database Configuration
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=url_shortener
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_SYNCHRONIZE=true
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+LOGGER_SILENT=false
+LOG_LEVEL=debug
 
 # URL Shortener Configuration
 BASE_URL=http://localhost:8000
+SERVICE_NAME=url-shortener-api
 DEFAULT_SLUG_LENGTH=6
 
 # =====end: backend environment variables=====
