feat: updated docker

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ POSTGRES_PASSWORD=password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
+SUPABASE_URL=http://127.0.0.1:54321
+SUPABASE_SERVICE_ROLE_KEY=<check supabase logs>
+SUPABASE_JWT_SECRET=<check supabase logs>
+
 LOGGER_SILENT=false
 LOG_LEVEL=debug
 
