--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "type-check:root": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build:backend-image": "docker build -f apps/backend/Dockerfile -t url-shortener-backend .",
+    "dev:stack": "pnpm supabase:start && docker compose up --build -d",
+    "stop:stack": "docker compose down && pnpm supabase:stop",
+    "start:backend-docker": "docker run -d --env-file=.env -p 8000:8000 url-shortener-backend"
   },
   "keywords": [
     "url-shortener",
