--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "inputs": ["$TURBO_DEFAULT$", ".env"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**", "build/**"],
       "env": [
         "NODE_ENV",
@@ -36,12 +36,47 @@
       "persistent": true
     },
     "dev:backend": {
-      "cache": false,
-      "persistent": true
+      "inputs": ["$TURBO_DEFAULT$", ".env"],
+      "persistent": true,
+      "env": [
+        "NODE_ENV",
+        "PORT",
+        "POSTGRES_DB",
+        "POSTGRES_USER",
+        "DATABASE_URI",
+        "POSTGRES_PASSWORD",
+        "POSTGRES_HOST",
+        "POSTGRES_PORT",
+        "SUPABASE_URL",
+        "SUPABASE_SERVICE_ROLE_KEY",
+        "SUPABASE_JWT_SECRET",
+        "BASE_URL",
+        "SERVICE_NAME",
+        "LOGGER_SILENT",
+        "LOG_LEVEL"
+      ]
     },
     "start:backend": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "inputs": ["$TURBO_DEFAULT$", ".env"],
+      "env": [
+        "NODE_ENV",
+        "PORT",
+        "POSTGRES_DB",
+        "POSTGRES_USER",
+        "DATABASE_URI",
+        "POSTGRES_PASSWORD",
+        "POSTGRES_HOST",
+        "POSTGRES_PORT",
+        "SUPABASE_URL",
+        "SUPABASE_SERVICE_ROLE_KEY",
+        "SUPABASE_JWT_SECRET",
+        "BASE_URL",
+        "SERVICE_NAME",
+        "LOGGER_SILENT",
+        "LOG_LEVEL"
+      ]
     },
     "docker:up": {
       "cache": false,
