--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ LOGGER_SILENT=false
 LOG_LEVEL=debug
 
 # URL Shortener Configuration
-BASE_URL=http://localhost:8000
+HOST=http://localhost:8000
 SERVICE_NAME=url-shortener-api
 DEFAULT_SLUG_LENGTH=6
 
