chore: update environment configuration and documentation for Supabase integration

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,113 @@
-# =====start: backend environment variables=====
+# ================================
+# URL Shortener - Environment Variables
+# ================================
 
-# Application Configuration
+# ================================
+# BACKEND CONFIGURATION (apps/backend)
+# ================================
+
+# Application Settings
 PORT=8000
 NODE_ENV=development
+BASE_URL=http://localhost:8000
+LOG_LEVEL=debug
+SERVICE_NAME=url-shortener-api
+DEFAULT_SLUG_LENGTH=6
 
+# ================================
+# SUPABASE CONFIGURATION
+# ================================
+
+# Local Development (Supabase CLI)
+DATABASE_HOST=localhost
+DATABASE_PORT=54322
+DATABASE_NAME=postgres
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+
+# Supabase URLs and Keys
+SUPABASE_URL=http://127.0.0.1:54321
+SUPABASE_ANON_KEY=<check supabase status>
+SUPABASE_SERVICE_ROLE_KEY=<check supabase status>
+SUPABASE_JWT_SECRET=<check supabase status>
+
+# Legacy PostgreSQL (keep for backward compatibility)
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=54322
 
-SUPABASE_URL=http://127.0.0.1:54321
-SUPABASE_SERVICE_ROLE_KEY=<check supabase logs>
-SUPABASE_JWT_SECRET=<check supabase logs>
-
+# Logging Configuration
 LOGGER_SILENT=false
-LOG_LEVEL=debug
 
-# URL Shortener Configuration
-HOST=http://localhost:8000
-SERVICE_NAME=url-shortener-api
-DEFAULT_SLUG_LENGTH=6
+# ================================
+# FRONTEND CONFIGURATION (apps/frontend)
+# ================================
 
-# =====end: backend environment variables=====
+# API Integration
+NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# Supabase Client (Frontend)
+NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
+NEXT_PUBLIC_SUPABASE_ANON_KEY=<check supabase status>
+
+# ================================
+# PRODUCTION OVERRIDES
+# ================================
+
+# Backend Production (Render)
+# PORT=8000
+# NODE_ENV=production
+# DATABASE_HOST=your-supabase-host
+# DATABASE_PORT=5432
+# DATABASE_PASSWORD=your-supabase-password
+# BASE_URL=https://url-shortener-but7.onrender.com
+# LOG_LEVEL=info
+# SUPABASE_URL=https://your-project.supabase.co
+# SUPABASE_ANON_KEY=your-production-anon-key
+# SUPABASE_SERVICE_ROLE_KEY=your-production-service-role-key
+
+# Frontend Production (Vercel)
+# NEXT_PUBLIC_API_URL=https://url-shortener-but7.onrender.com
+# NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=your-production-anon-key
+
+# ================================
+# OPTIONAL SERVICES
+# ================================
+
+# OpenAI (for Supabase AI features)
+# OPENAI_API_KEY=your-openai-key
+
+# Email Provider (Production)
+# SENDGRID_API_KEY=your-sendgrid-key
+
+# SMS Provider (Production)
+# SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN=your-twilio-token
+
+# ================================
+# SETUP INSTRUCTIONS
+# ================================
+
+# 1. Copy this file to .env in your app directories:
+#    - cp .env.example apps/backend/.env
+#    - cp .env.example apps/frontend/.env.local
+#
+# 2. Start Supabase local development:
+#    - pnpm supabase:start
+#
+# 3. Get your local credentials:
+#    - pnpm supabase:status
+#    - Copy the values to replace placeholders above
+#
+# 4. For production:
+#    - Create Supabase project: https://supabase.com/dashboard
+#    - Configure Render with production environment variables
+#    - Configure Vercel with NEXT_PUBLIC_* variables
+
+# ================================
+# LAST UPDATED
+# ================================
+# Date: January 2025
+# Architecture: Supabase + Render + Vercel
