feat: implement slug generation strategies and deduplication features, including nanoid and uuid strategies, along with associated services and validation mechanisms

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,26 @@ NODE_ENV=development
 BASE_URL=http://localhost:8000
 LOG_LEVEL=debug
 SERVICE_NAME=url-shortener-api
-DEFAULT_SLUG_LENGTH=6
+
+# Slug Generation Strategy Configuration
+SLUG_GENERATION_STRATEGY=nanoid
+AVAILABLE_SLUG_STRATEGIES=nanoid,uuid
+DEFAULT_SLUG_LENGTH=7
+MIN_SLUG_LENGTH=4
+MAX_SLUG_LENGTH=21
+
+# Slug Generation Defaults
+DEFAULT_ALPHABET_TYPE=urlSafe
+DEFAULT_PATTERN_TYPE=urlSafe
+ENABLE_DEDUPLICATION=false
+MAX_COLLISION_RETRIES=5
+
+# Slug Space Validation Configuration
+SLUG_SPACE_WARNING_THRESHOLD=0.75
+SLUG_SPACE_CRITICAL_THRESHOLD=0.90
+SPACE_USAGE_STALE_MINUTES=15
+ENABLE_SPACE_VALIDATION=true
+SPACE_VALIDATION_STRICT_MODE=false
 
 # ================================
 # SUPABASE CONFIGURATION
