--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "supabase:stop": "supabase stop",
     "supabase:status": "supabase status",
     "dev:backend": "pnpm supabase:start && pnpm --filter backend run start:dev",
-    "start:backend": "pnpm --filter backend run start",
+    "start:backend": "pnpm --filter backend run start:dev",
     "prod:backend": "pnpm --filter backend run start:prod",
     "dev:frontend": "docker-compose -f docker-compose.dev.yml up --build",
     "start:frontend": "pnpm --filter frontend run start",
