--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,12 +27,14 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@url-shortener/types": "workspace:*",
+    "nanoid": "^5.1.5",
     "nest-winston": "^1.10.2",
     "nestjs-zod": "5.0.0-beta.20250719T005107",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^4.0.10"
   },
@@ -47,6 +49,7 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
