feat: enhance project structure and documentation, update package configurations for backend, frontend, and shared types with improved descriptions and scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "url-shortener",
   "version": "1.0.0",
-  "description": "A URL shortener platform built as a monorepo",
+  "description": "Production-ready URL shortener platform built as a monorepo with NestJS backend, Next.js frontend, and Supabase integration",
   "private": true,
   "scripts": {
     "clean": "turbo run clean",
@@ -10,35 +10,56 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "type-check": "turbo run type-check",
-    "supabase:start": "supabase start",
-    "supabase:stop": "supabase stop",
-    "supabase:status": "supabase status",
-    "dev:backend": "pnpm supabase:start && pnpm --filter backend run start:dev",
-    "start:backend": "pnpm --filter backend run start:dev",
-    "prod:backend": "pnpm --filter backend run start:prod",
-    "dev:frontend": "docker-compose -f docker-compose.dev.yml up --build",
-    "start:frontend": "pnpm --filter frontend run start",
-    "lint:root": "eslint . --fix",
-    "type-check:root": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "prepare": "husky install",
-    "build:backend-image": "docker build -f apps/backend/Dockerfile -t url-shortener-backend .",
-    "dev:stack": "pnpm supabase:start && docker compose up --build -d",
-    "stop:stack": "docker compose down && pnpm supabase:stop",
-    "start:backend-docker": "docker run -d --env-file=.env.docker -p 8000:8000 url-shortener-backend"
+    "dev:backend": "pnpm --filter backend run start:dev",
+    "dev:frontend": "pnpm --filter frontend run dev",
+    "dev:types": "pnpm --filter @url-shortener/types run dev",
+    "dev:all": "turbo run dev --parallel",
+    "build:backend": "pnpm --filter backend run build",
+    "build:frontend": "pnpm --filter frontend run build",
+    "build:types": "pnpm --filter @url-shortener/types run build",
+    "test:backend": "pnpm --filter backend run test",
+    "test:frontend": "pnpm --filter frontend run test",
+    "test:types": "pnpm --filter @url-shortener/types run test",
+    "lint:backend": "pnpm --filter backend run lint",
+    "lint:frontend": "pnpm --filter frontend run lint",
+    "lint:root": "eslint . --fix",
+    "start:backend": "pnpm --filter backend run start:prod",
+    "start:frontend": "pnpm --filter frontend run start",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop",
+    "supabase:status": "supabase status",
+    "supabase:reset": "supabase db reset",
+    "docker:build": "docker build -f apps/backend/Dockerfile -t url-shortener-backend .",
+    "docker:run": "docker run -d --env-file=.env.docker -p 8000:8000 url-shortener-backend",
+    "docker:stop": "docker stop url-shortener-backend",
+    "stack:dev": "pnpm supabase:start && docker compose up --build -d",
+    "stack:stop": "docker compose down && pnpm supabase:stop",
+    "ci:build": "turbo run build",
+    "ci:test": "turbo run test",
+    "ci:lint": "turbo run lint",
+    "ci:type-check": "turbo run type-check"
   },
   "keywords": [
     "url-shortener",
     "monorepo",
-    "nextjs",
     "nestjs",
-    "supabase"
+    "nextjs",
+    "supabase",
+    "typescript",
+    "postgresql",
+    "docker",
+    "turbo",
+    "pnpm"
   ],
+  "author": "Kashaf Ahmed <kashafaahmed@gmail.com>",
   "license": "MIT",
   "packageManager": "pnpm@9.0.0",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0",
+    "pnpm": ">=9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
