--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,23 +1,33 @@
 {
   "name": "backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "1.0.0",
+  "description": "NestJS backend API for URL shortener platform with advanced slug generation, deduplication, and analytics",
+  "author": "Kashaf Ahmed <kashafaahmed@gmail.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf dist coverage",
+    "db:migrate": "typeorm migration:run",
+    "db:generate": "typeorm migration:generate",
+    "db:revert": "typeorm migration:revert",
+    "docker:build": "docker build -t url-shortener-backend .",
+    "docker:run": "docker run -p 8000:8000 url-shortener-backend"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -74,5 +84,14 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "keywords": [
+    "nestjs",
+    "api",
+    "url-shortener",
+    "postgresql",
+    "typeorm",
+    "swagger",
+    "docker"
+  ]
 }
