--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@url-shortener/types",
   "version": "1.0.0",
-  "description": "Shared TypeScript types for URL shortener platform",
+  "description": "Shared TypeScript types and Zod schemas for URL shortener platform - used across frontend, backend, and packages",
+  "author": "Kashaf Ahmed <kashafaahmed@gmail.com>",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -14,21 +15,37 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
-    "test": "vitest"
+    "type-check:watch": "tsc --noEmit --watch",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ci": "vitest --run --coverage",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "format": "prettier --write src",
+    "format:check": "prettier --check src"
   },
   "keywords": [
-    "types",
     "typescript",
-    "url-shortener"
+    "types",
+    "zod",
+    "schemas",
+    "url-shortener",
+    "shared",
+    "monorepo"
   ],
-  "author": "",
   "license": "MIT",
   "devDependencies": {
     "tsup": "^8.5.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "zod": "^4.0.10"
+  },
+  "peerDependencies": {
+    "typescript": ">=5.0.0"
   }
 }
